@@ -1,0 +1,2 @@
+;!generate: org.cougaar.tools.build.VersionWriter
+10.0 (experimental)
